--- a/style.css
+++ b/style.css
@@ -12,69 +12,75 @@ Tags: 			starkers, naked, clean, basic
 ===========================
 CONTENTS:
 
-01 Sensible defaults
-02 Typography
+01 Reset and Sensible Defaults
+02 Layout
 03 Media queries 
 ===========================
 */
 
 /* ---------------------------------------------------------------------------------------------------------- 
-01 Sensible defaults ----------------------------------------------------------------------------------------
+01 Reset and Sensible Defaults ------------------------------------------------------------------------------
 ---------------------------------------------------------------------------------------------------------- */
 
-@import "css/reset.css";
+/* RESET
+-----------------------------*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, a, abbr, acronym, address, big, cite, del, dfn, font, img, ins, kbd, q, s, samp, tt, var, ol, ul, li, fieldset, form, label, legend { margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; }
+:focus { outline: 0; }
+ol, ul { list-style: none; }
+blockquote:before, blockquote:after, q:before, q:after { content: ""; }
+blockquote, q { quotes: "" ""; }
+section, header, footer, nav, article, aside { display:block; }
+body { font-size:75%; line-height:1.5em; font-family:Arial, Helvetica, sans-serif; }
 
-div,
-article,
-section,
-header,
-footer,
-nav,
-li					{ position:relative; /* For absolutely positioning elements within containers (add more to the list if need be) */ }
-.group:after 		{ display:block; height:0; clear:both; content:"."; visibility:hidden; /* For clearing */ }
-body 				{ background:#fff; /* Don't forget to style your body to avoid user overrides */ }
-::-moz-selection 	{ background:#ff0; color:#333; }
-::selection 		{ background:#ff0; color:#333; }
+/* TYPOGRAPHY 
+---------------------------*/
+a { }
+a:hover { }
+a:active { }
+a:visited { }
+p { padding:0 0 1.5em 0; }
+ol, ul { margin:0 0 1.5em 0; padding:0 0 0 1.5em; }
+ul li, ol ul li { list-style:disc outside; padding:0 0 2px; }
+ol li { list-style:decimal; padding:0 0 2px; }
+
+h1, h2, h3, h4, h5, h6 { padding:0 0 .75em; margin:0 0 0 0; line-height:normal; font-weight:normal; }
+h1 { font-size:30px; padding:0; margin-bottom:1em; }
+h2 { font-size:19px; }
+h3 { font-size:17px; }
+h4 { font-size:17px; }
+h5 { font-size:16px; }
+h6 { font-size:14px; }
+
+/* PAGE ELEMENTS
+-------------------------*/
+hr { height:1px; background:none; border:0; border-bottom:1px solid #ccc;  margin:0 -25px 1.5em; }
+strong { font-weight:bold; }
+em { font-style:italic; }
+pre, code { font-family:"Courier New", Courier, monospace; line-height:1.5em; margin:0 0 1.5em 0; }
+blockquote { padding:0px 15px 15px 0px; margin:0 0 .5em 0; font-style:italic; clear:both; }
+blockquote p { margin:0; padding:5px 0 5px; }
+blockquote cite { padding-left:25px; }
+blockquote img { float:left; padding:0 15px 0 0; }
+legend { font-size:1.2em; font-weight:bold; padding:0 10px;  }
+fieldset { border:1px solid #ddd; padding:10px 20px; }
+label { font-weight:bold; }
+.clear { clear:both; }
 
 /* ---------------------------------------------------------------------------------------------------------- 
-02 Typography -----------------------------------------------------------------------------------------------
+03 Layout  --------------------------------------------------------------------------------------------------
 ---------------------------------------------------------------------------------------------------------- */
-/*
 
-14 / 16	= 		0.875em 		(14px equivalent)
-16 / 16	= 		1em 			(16px equivalent)
-18 / 16 = 		1.125em 		(18px equivalent)
-21 / 16 = 		1.3125em 		(21px equivalent)
-24 / 16 = 		1.5em 			(24px equivalent)
-30 / 16 = 		1.875em 		(30px equivalent)
-
-*/
-
-body,
-input,
-textarea 			{ /* We strongly recommend you declare font-weight using numerical values, but check to see which weights you're exporting first */ }
-
-h1, 
-h2, 
-h3, 
-h4, 
-h5, 
-h6 					{ font-weight:bold; /* This helps to identify headings at the initial build stage, but you should write something more precise later on */ }
 
 /* ---------------------------------------------------------------------------------------------------------- 
-03 Media queries (using a mobile-first approach) ------------------------------------------------------------
+03 Media queries  -------------------------------------------------------------------------------------------
 ---------------------------------------------------------------------------------------------------------- */
 
-/* 400 and up */
-@media screen and (min-width:400px) {
-
-					{ /* Place your styles here for all widths greater than 400px */ }
-
+/* Note: Design for a width of 768px */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+	
 }
 
-/* Retina Display */
-@media screen and (-webkit-min-device-pixel-ratio:2) {
-
-					{ /* Place your styles here for all 'Retina' screens */ }
-
+/* All Mobile Sizes (devices and browser) */
+@media all and (max-width: 767px) {
+	
 }
